<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_margin="10dp"
        android:background="@drawable/leak_query_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/application_label_colon"
                android:layout_width="0dp"
                android:layout_weight="@integer/data_leak_left_column_weight"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginRight="@dimen/data_leak_margin"
                android:layout_marginLeft="@dimen/data_leak_margin"/>

            <TextView
                android:id="@+id/app_name"
                android:layout_width="0dp"
                android:layout_weight="@integer/data_leak_right_column_weight"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginRight="@dimen/data_leak_margin"
                android:layout_marginLeft="@dimen/data_leak_margin"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/category_label_colon"
                android:layout_width="0dp"
                android:layout_weight="@integer/data_leak_left_column_weight"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginRight="@dimen/data_leak_margin"
                android:layout_marginLeft="@dimen/data_leak_margin"/>

            <TextView
                android:id="@+id/category"
                android:layout_width="0dp"
                android:layout_weight="@integer/data_leak_right_column_weight"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginRight="@dimen/data_leak_margin"
                android:layout_marginLeft="@dimen/data_leak_margin"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/type_label_colon"
                android:layout_width="0dp"
                android:layout_weight="@integer/data_leak_left_column_weight"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginRight="@dimen/data_leak_margin"
                android:layout_marginLeft="@dimen/data_leak_margin"/>

            <TextView
                android:id="@+id/type"
                android:layout_width="0dp"
                android:layout_weight="@integer/data_leak_right_column_weight"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginRight="@dimen/data_leak_margin"
                android:layout_marginLeft="@dimen/data_leak_margin"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/destination_label_colon"
                android:layout_width="0dp"
                android:layout_weight="@integer/data_leak_left_column_weight"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginRight="@dimen/data_leak_margin"
                android:layout_marginLeft="@dimen/data_leak_margin"/>

            <TextView
                android:id="@+id/destination"
                android:layout_width="0dp"
                android:layout_weight="@integer/data_leak_right_column_weight"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginRight="@dimen/data_leak_margin"
                android:layout_marginLeft="@dimen/data_leak_margin"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/time_label_colon"
                android:layout_width="0dp"
                android:layout_weight="@integer/data_leak_left_column_weight"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginRight="@dimen/data_leak_margin"
                android:layout_marginLeft="@dimen/data_leak_margin"/>

            <TextView
                android:id="@+id/time_stamp"
                android:layout_width="0dp"
                android:layout_weight="@integer/data_leak_right_column_weight"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginRight="@dimen/data_leak_margin"
                android:layout_marginLeft="@dimen/data_leak_margin"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/content_label_colon"
                android:layout_width="0dp"
                android:layout_weight="@integer/data_leak_left_column_weight"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginRight="@dimen/data_leak_margin"
                android:layout_marginLeft="@dimen/data_leak_margin"/>

            <TextView
                android:id="@+id/content"
                android:layout_width="0dp"
                android:layout_weight="@integer/data_leak_right_column_weight"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginRight="@dimen/data_leak_margin"
                android:layout_marginLeft="@dimen/data_leak_margin"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/status_label_colon"
                android:layout_width="0dp"
                android:layout_weight="@integer/data_leak_left_column_weight"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginRight="@dimen/data_leak_margin"
                android:layout_marginLeft="@dimen/data_leak_margin"/>

            <TextView
                android:id="@+id/status"
                android:layout_width="0dp"
                android:layout_weight="@integer/data_leak_right_column_weight"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginRight="@dimen/data_leak_margin"
                android:layout_marginLeft="@dimen/data_leak_margin"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>