<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/graph_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"/>

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="centerInside"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/spinner_category"
            android:textSize="@dimen/query_tab_text_size"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:layout_weight="3">

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/spinner_status"
            android:textSize="@dimen/query_tab_text_size"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:layout_weight="3">

            <Spinner
                android:id="@+id/spinner_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textSize="@dimen/query_tab_text_size"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:id="@+id/start_date"/>

            <ImageView
                android:id="@+id/start_date_calendar"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/calendar"
                android:tint="@color/white"
                android:scaleType="centerInside"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textSize="@dimen/query_tab_text_size"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:id="@+id/end_date"/>

            <ImageView
                android:id="@+id/end_date_calendar"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/calendar"
                android:tint="@color/white"
                android:scaleType="centerInside"/>
        </RelativeLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/query"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/download" />

    <TextView
        android:id="@+id/total_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/gold"
        android:textSize="22sp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="gone" />
</LinearLayout>