<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/permission_disabled_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/application_settings_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/permissions_not_granted_message"/>

                <Button
                    android:id="@+id/turn_on_permission_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turn_on_permission_button"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/usage_status_settings_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/usage_stats_permission_not_granted_message"/>

                <Button
                    android:id="@+id/turn_on_usage_stats_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turn_on_permission_button"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView android:id="@+id/leaksList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="88dp"
            android:clipToPadding="false">
        </ListView>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_anchorGravity="left|start"
            android:layout_gravity="bottom|start"
            app:layout_anchor="@+id/vpn_toggle">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/stats_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="normal"
                app:rippleColor="@color/background_floating_material_dark"
                android:layout_marginTop="@dimen/main_activity_fab_margin"
                android:layout_marginBottom="@dimen/main_activity_fab_margin"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/graph"
                android:elevation="10dp"/>
        </FrameLayout>

        <FrameLayout
            android:id="@id/vpn_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_anchorGravity="bottom|right"
            app:layout_anchor="@id/leaksList">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/on_off_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="normal"
                app:rippleColor="@color/background_floating_material_dark"
                android:layout_marginRight="@dimen/main_activity_fab_margin"
                android:layout_marginEnd="@dimen/main_activity_fab_margin"
                android:layout_marginTop="@dimen/main_activity_fab_margin"
                android:layout_marginBottom="@dimen/main_activity_fab_margin"
                android:layout_marginLeft="@dimen/main_activity_fab_spacing"
                android:layout_marginStart="@dimen/main_activity_fab_spacing"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/vpn"
                android:layout_marginRight="@dimen/main_activity_fab_spacing_half"
                android:layout_marginEnd="@dimen/main_activity_fab_spacing_half"
                android:elevation="10dp"/>

            <TextView
                android:id="@+id/on_indicator"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:paddingTop="3dp"
                android:gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/chat_bubble"
                android:backgroundTint="@color/vpn_green"
                android:text="@string/vpn_on"
                android:elevation="10dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/off_indicator"
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:paddingTop="3dp"
                android:gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/chat_bubble"
                android:backgroundTint="@color/vpn_red"
                android:text="@string/vpn_off"
                android:elevation="10dp"
                android:textStyle="bold"
                android:visibility="invisible"/>

            <ProgressBar
                android:id="@+id/loading_indicator"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/chat_bubble"
                android:backgroundTint="@color/vpn_yellow"
                android:indeterminate="true"
                android:elevation="10dp"
                android:visibility="invisible"/>
        </FrameLayout>
    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>